doc/examples/InvalidTests/TestLogical2.agl
a : Boolean = False;
b : String = "hello";
c : Boolean = a or b; # Error: Both operands of 'or' must be boolean!
